fix sidebar overflow

--- a/src/components/menu/styles.scss
+++ b/src/components/menu/styles.scss
@@ -39,6 +39,7 @@
     justify-content: space-between;
     display: flex;
     flex-direction: column;
+    overflow: auto;
 
     .menu-link {
       .menu-link-title {
@@ -65,7 +66,7 @@
           }
         }
       }
-    
+
     .menu-link-content {
       padding: 10px 24px 42px;
       font-family: $font-family-2;
